--- a/notes/templates/notes_list.html
+++ b/notes/templates/notes_list.html
@@ -30,7 +30,7 @@ Notes
               Syllabus.
             </p>
             <a
-              href="./notes/class11.html"
+              href="{% url "notes:plusone" %}"
               class="icon-link gap-1 icon-link-hover stretched-link"
             >
               Download Notes
@@ -58,7 +58,7 @@ Notes
               Syllabus.
             </p>
             <a
-              href="./notes/class12.html"
+              href="{% url "notes:plustwo" %}"
               class="icon-link gap-1 icon-link-hover stretched-link"
             >
               Download Notes
@@ -85,7 +85,7 @@ Notes
               UG/PG linear algebra random notes 
             </p>
             <a
-              href="./notes/linearalgebra.html"
+              href="{% url "notes:linearalgebra" %}"
               class="icon-link gap-1 icon-link-hover stretched-link"
             >
               View Notes
